<resources>
    <string name="app_name">AndroidClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="cellar">Cellar</string>
    <string name="livingroom">Livingroom</string>
    <string name="garage">Garage</string>
    <string name="kitchen">Kitchen</string>
    <string name="live_livingroom">Real-Time Data Livingroom</string>
    <string name="live_kitchen">Real-Time Data Kitchen</string>
    <string name="live_garage">Real-Time Data Garage</string>
    <string name="live_cellar">Real-Time Data Cellar</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="airpressure">Airpressure:</string>
    <string name="charts_livingroom">Charts Livingroom</string>
    <string name="gas">Gas:</string>
    <string name="charts_garage">Charts Garage</string>
    <string name="charts_kitchen">Charts Kitchen</string>
    <string name="light">Light</string>
    <string name="charts_cellar">Charts Cellar</string>

</resources>
